kubernetes_deploy/staging/deployment-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "test-change-cause-update-me"
  name: laa-legal-adviser-api-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laa-legal-adviser-api
      tier: api
      env: staging
  template:
    metadata:
      labels:
        app: laa-legal-adviser-api
        tier: api
        env: staging
        service_area: laa-get-access
        service_team: cla-fala
    spec:
      serviceAccountName: cd-serviceaccount
      containers:
      - image: "django:python3-onbuild"
        name: app
        readinessProbe:
          httpGet:
            path: /healthcheck.json
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthcheck.json
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
        resources:
          limits:
            cpu: 600m
            memory: 600Mi
          requests:
            cpu: 300m
            memory: 300Mi
