kubernetes_deploy/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-legal-adviser-api
  namespace: laa-legal-adviser-api-staging
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8000
  selector:
    app: laa-legal-adviser-api
