kubernetes_deploy/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laa-legal-adviser-api-v122
  namespace: laa-legal-adviser-api-staging
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: laa-legal-adviser-api-v122-laa-legal-adviser-api-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/whitelist-source-range: "$ALLOWLIST_IPS"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
spec:
  ingressClassName: "modsec"
  tls:
  - hosts:
    - laa-legal-adviser-api-staging.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: laa-legal-adviser-api-staging.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: laa-legal-adviser-api
            port:
              number: 80
